awx-web-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: awx-web
  labels:
    app: awx
    role: web
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: awx
        role: web
    spec:
      containers:
      - name: awx-web
        image: ansible/ansible_web:latest
        ports:
        - name: http
          containerPort: 8052
