awx-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: awx-web
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8052
  selector:
    app: awx
    role: web
