awx-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: awx
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: sapi.eastus.cloudapp.azure.com
    http:
      paths:
      - path: /
        backend:
          serviceName: awx-web
          servicePort: 80
